<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CompetitionTool</string>
    <string name="server_name">CCM</string>

    <string name="dashboard_title">Dashboard</string>

    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="dnf">DNF</string>
    <string name="next">Next</string>
    <string name="plus_two">+2</string>

    <string name="login">Log In</string>
    <string name="username">username</string>
    <string name="password">password</string>

    <string name="needs_network">This tool needs a network connection. Please connect to the network to continue.</string>
    <string name="wifi_settings">Go to wifi settings</string>

    <string name="manually_enter_time">!!</string>
    <string name="manually_enter_time_hint">time in millis</string>

    <string name="select_competitor_toast">Please type in a valid competitor name</string>
    <string name="select_round_toast">Please select a round from the dropdown</string>
    <string name="type_participant_name">Type participant name</string>
    <string name="select_round">Select round</string>
    <string name="select_round_display_string">%1$s Round %2$d</string>

    <string name="inspection_toast_reset_timer">Please reset the timer</string>
    <string name="inspection_toast_turn_on_timer">Please turn on the timer</string>

    <string name="penalty_failure_dnf">Can\'t penalize a DNF</string>

    <string name="server_info_domain_name">URL</string>
    <string name="server_info_port_number">Port number</string>
    <string name="server_info_not_set">Not set</string>
    <string name="server_info_auto_discover">Automatically discover server</string>
    <string name="server_info_edit">Edit manually</string>
    <string name="server_info_use_defaults">Use defaults</string>

    <string name="setup_select_competition">Select your competition</string>

</resources>
