<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/server_info_domain_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dip"/>

    <TextView
        android:id="@+id/server_info_port_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dip"/>

    <Button
        android:id="@+id/server_info_use_defaults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_info_use_defaults"/>

    <Button
        android:id="@+id/server_info_auto_discover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_info_auto_discover"/>

    <Button
        android:id="@+id/server_info_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_info_edit"/>

</LinearLayout>