<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:hint="@string/username"
            android:textSize="20dip"/>

        <EditText
            android:id="@+id/password_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20dip"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="login"
            android:visibility="gone"/>

    </LinearLayout>

    <WebView
        android:id="@+id/get_token_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_layout"
        android:visibility="visible"/>

</RelativeLayout>